--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
         <item>Ralph &amp; Loren</item>
         <item>Polo A.S.S.N.</item>
         <item>Skechers</item>
-        <item>Next</item>
+        <item>Nike</item>
     </string-array>
 </resources>
